# sdfast

./: .gitignore  CMakeLists.txt  README.md  sdfast_api.h
.github/workflows/: buildtest.yml
calc/: alloc.c  calc.h  decl.c  protect.c  sincos.c  stats.c
examples/c/: sphere.c
examples/fortran/: slew.f
libs/: libs.h  machine.c
sdfast_main/: main.c  sdderiv.c  sdfast.h  sdinteg.c  sdroot.c
tests/: CMakeLists.txt  buildtest.cpp  buildtest.h  testrunner.cpp
